# db-telegram-backup

./: .gitignore  README.md  main.py  pyproject.toml
.envs/: .env.example
src/core/: config.py  factories.py
src/services/: backup.py  cleanup.py  telegram.py
